--- a/1_HTML5/연습하기.html
+++ b/1_HTML5/연습하기.html
@@ -9,10 +9,20 @@
   <table border="1" width="400px" height="400px">
 
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td>1</td>
+      <td>2</td>
+      <td rowspan="2">3</td>
+      <td>4</td>
+    </tr>
+    
+    <tr>
+      <td colspan="2">5</td>
+      <td rowspan="2">6</td>
+    </tr>
+
+    <tr>
+      <td>7</td>
+      <td colspan="2">8</td>
     </tr>
 
   </table>
