--- a/2_CSS/10_Flexbox.html
+++ b/2_CSS/10_Flexbox.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>10_Flexbox</title>
-  <link rel="stylesheet" href="/2_CSS/css/Flexbox.css">
+  <link rel="stylesheet" href="css/Flexbox.css">
 </head>
 <body>
   <h1>Flexbox</h1>
